--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node index.js"
   },
   "keywords": [],
@@ -18,5 +18,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "zod": "^3.25.67"
+  },
+  "devDependencies": {
+    "express-rate-limit": "^8.2.1",
+    "ioredis": "^5.9.2",
+    "jest": "^30.2.0",
+    "supertest": "^7.2.2"
   }
 }
